[package]
name = "simple-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22", features = ["full"] }
dashmap = "5.4"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
incremental = false 
strip = true
opt-level = 'z'
